@@ -14,10 +14,11 @@ clutter-tut-with-examples.xml: clutter-tut.xml insert_example_code.pl
 	$(PERL_PATH) $(srcdir)/insert_example_code.pl $(top_srcdir)/examples $< >$@
 
 # The new XML DocBook way:
+XSLTPROC = xsltproc
 html/index.html: clutter-tut-with-examples.xml
 	rm -rf html
 	$(mkinstalldirs) html
-	xsltproc \
+	$(XSLTPROC) \
 		--param toc.section.depth 1	\
 		--stringparam html.stylesheet "style.css"	\
 		--stringparam admon.graphics 1	\
@@ -29,6 +30,7 @@ html/index.html: clutter-tut-with-examples.xml
 		--stringparam navig.graphics.extension ".png"	\
 		--stringparam navig.graphics.path "../icons/"	\
 		--stringparam toc.list.type "ul"	\
+		--stringparam use.id.as.filename "1" \
 		-o html/ --xinclude --catalogs $(DOCBOOK_STYLESHEET)	\
 		$<
 
